--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.note_app_frontend">
+
+    <uses-permission android:name="android.permiddion.CAMERA"/>
+
    <application
         android:label="MyNotesApp"
         android:name="${applicationName}"
