--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   dio: ^5.2.1+1
+  camera: ^0.10.5+2
+  google_mlkit_text_recognition: ^0.8.1
+  permission_handler: ^10.3.0
 
 dev_dependencies:
   flutter_test:
