--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   quill_html_editor: ^2.1.9
   geolocator: ^9.0.2
   material_tag_editor: ^0.1.2
+  speech_to_text: ^6.1.1
 
 dev_dependencies:
   flutter_test:
