--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   geolocator: ^9.0.2
   material_tag_editor: ^0.1.2
   speech_to_text: ^6.1.1
+  camera: ^0.10.5+2
+  google_mlkit_text_recognition: ^0.8.1
+  permission_handler: ^10.3.0
 
 dev_dependencies:
   flutter_test:
