--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   camera: ^0.10.5+2
   google_mlkit_text_recognition: ^0.8.1
   permission_handler: ^10.3.0
+  image_picker: ^0.8.9
+  image_cropper: ^4.0.1
 
 dev_dependencies:
   flutter_test:
