--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   permission_handler: ^10.3.0
   image_picker: ^0.8.9
   image_cropper: ^4.0.1
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
