--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           channel: "beta"
       - run: flutter pub get
-      - run: flutter analyze .
+      - run: flutter analyze --no-fatal-warnings --no-fatal-infos .
       - run: flutter build apk
       - uses: actions/upload-artifact@v1
         with:
