--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.9
   image_cropper: ^4.0.1
   flutter_speed_dial: ^7.0.0
+  simple_gradient_text: ^1.2.4
 
 dev_dependencies:
   flutter_test:
