--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_cropper: ^4.0.1
   flutter_speed_dial: ^7.0.0
   simple_gradient_text: ^1.2.4
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
