--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   chat_bubbles: ^1.4.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
