--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   simple_gradient_text: ^1.2.4
   awesome_snackbar_content: ^0.1.3
+  mask_text_input_formatter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
