--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   hive_flutter: ^1.1.0
   uuid: ^3.0.7
   mask_text_input_formatter: ^2.5.0
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
