--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   uuid: ^3.0.7
   mask_text_input_formatter: ^2.5.0
   geocoding: ^2.1.0
+  flutter_html: ^3.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
